fixed layout bugs

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -77,18 +77,16 @@ h1, h2, h3, h4, h5, h6 {
     -webkit-box-shadow: inset 0 0 0 2px #fc7700;
     box-shadow: inset 0 0 0 2px #fc7700;
     text-transform: uppercase;
-    width: 135px;
+    padding: 0 15px;
     text-align: center;
     height: 34px;
     line-height: 34px;
-    padding: 0;
     font-size: 18px;
     font-weight: 800;
     border: 0;
     -webkit-transition: all 0.3s ease 0s;
     -moz-transition: all 0.3s ease 0s;
     -o-transition: all 0.3s ease 0s;
-    -ms-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
 }
 
